--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPSfTTEy2Uer6zLurIQWJs2",
+      "authorship_tag": "ABX9TyNguLKN9+iTMGVBMkLKpXb/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "\n",
         "gumi TECH Blog Elixir入門\n",
         "\n",
-        "https://dev.to/gumi/elixir-08--1c4c\n",
+        "https://dev.to/gumi/elixir-09--1a0p\n",
         "\n",
         "を colab 化する。\n",
         "\n",
@@ -2206,10 +2206,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "IW2JJ0xdpQX5",
-        "outputId": "24ba1d7b-019e-4829-fd75-3d1e18546b8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "24ba1d7b-019e-4829-fd75-3d1e18546b8a"
       },
       "source": [
         "# デフォルト値の値が評価されるのは、関数を定義した時ではなく、関数が呼び出されて\n",
@@ -2232,15 +2232,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "qilvfOt8b_i4"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -2270,11 +2261,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cOrgT_BrOD4i",
-        "outputId": "867176d6-b807-4056-9466-a29b4d36f6e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cOrgT_BrOD4i",
+        "outputId": "867176d6-b807-4056-9466-a29b4d36f6e9"
       },
       "source": [
         "# 複数の句をもつ関数にも、デフォルト値は使えるが、アリティを同じくする句には、\n",
@@ -2338,33 +2329,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xibflfQyO5Om"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xibflfQyO5Om",
+        "outputId": "244d05b4-3e13-4095-cefb-40d73aab03b5"
       },
       "source": [
-        "デフォルト値を与えるときは、関数の定義が重複しないよう気をつけてください。\n",
-        "defmodule Concat do\n",
-        "  def join(a, b) do\n",
-        "    IO.puts \"#=> join/2\"\n",
-        "    a <> b\n",
-        "  end\n",
-        "\n",
-        "  def join(a, b, sep \\\\ \" \") do\n",
-        "    IO.puts \"#=> join/3\"\n",
-        "    a <> sep <> b\n",
-        "  end\n",
-        "end\n",
-        "上の関数をコンパイルすると、つぎのような警告が示されます。ふたつの引数を渡すとつねにアリティ2の関数が呼び出され、\n",
-        "アリティ3のデフォルト値が使われることはないからです。\n",
-        "warning: this clause cannot match because a previous clause at line 2 always matches\n",
-        "エラーではありませんので、コンパイルはでき、関数も呼び出せます。アリティ3の関数は3つの引数を渡さないかぎり呼び出されません。\n",
-        "引数がふたつのときどういう結果を得たいのか考え直すべきでしょう。\n",
-        "iex(1)> Concat.join(\"hello\", \"world\")\n",
-        "#=> join/2\n",
-        "\"helloworld\"\n",
-        "iex(2)> Concat.join(\"hello\", \"world\", \", \")\n",
-        "#=> join/3\n",
-        "\"hello, world\"\n",
-        "つぎのコードは、関数のデフォルト値とパターンマッチングを使った例です。Enum.join/2は、リスト(Enumerable)要素の間に第2引数の文字列を挟んで、バイナリ(文字列)につなげる関数です。\n",
+        "# 関数のデフォルト値とパターンマッチングを使った例\n",
+        "# Enum.join/2は、リスト (Enumerable) 要素の間に第 2 引数の文字列を挟んで、バイナリ (文字列) につなげる関数\n",
+        "%%writefile temp.exs\n",
         "defmodule Greeter do\n",
         "  def hello(names, language \\\\ \"en\")\n",
         "\n",
@@ -2379,19 +2353,223 @@
         "  defp phrase(\"en\"), do: \"hello, \"\n",
         "  defp phrase(\"ja\"), do: \"こんにちは\"\n",
         "end\n",
-        "iex> Greeter.hello(\"alice\")\n",
-        "\"hello, alice\"\n",
-        "iex> Greeter.hello([\"alice\", \"carroll\"])\n",
-        "\"hello, alice, carroll\"\n",
-        "iex> Greeter.hello([\"桃太郎\", \"金太郎\", \"浦島太郎\"], \"ja\")\n",
-        "\"こんにちは桃太郎, 金太郎, 浦島太郎\"\n",
-        "なお、上のコードの最初の関数は、パイプ演算子|>を用いると、つぎのようにすっきりと書き替えられます。|>は左オペランドの値を、右オペランドの関数に第1引数として渡す演算子です。\n",
-        "def hello(names, language) when is_list(names) do\n",
-        "  # hello(Enum.join(names, \", \"), language)\n",
-        "  names\n",
-        "  |> Enum.join(\", \")\n",
-        "  |> hello(language)\n",
+        "\n",
+        "IO.puts  Greeter.hello(\"alice\") #=> \"hello, alice\"\n",
+        "IO.puts  Greeter.hello([\"alice\", \"carroll\"]) #=> \"hello, alice, carroll\"\n",
+        "IO.puts  Greeter.hello([\"桃太郎\", \"金太郎\", \"浦島太郎\"], \"ja\") #=> \"こんにちは桃太郎, 金太郎, 浦島太郎\""
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hurCFuUtU6Du",
+        "outputId": "f493504e-7a0f-49de-f045-2732dca62cfb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello, alice\n",
+            "hello, alice, carroll\n",
+            "こんにちは桃太郎, 金太郎, 浦島太郎\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kkZbxkt_VuNi",
+        "outputId": "73d6b668-2503-428d-ec59-b152a77df28a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 上のコードの最初の関数は、パイプ演算子 `|>` を用いると、すっきりと書き替えられる\n",
+        "# `|>` は左オペランドの値を、右オペランドの関数に第 1 引数として渡す演算子\n",
+        "%%writefile temp.exs\n",
+        "defmodule Greeter do\n",
+        "  def hello(names, language \\\\ \"en\")\n",
+        "\n",
+        "  def hello(names, language) when is_list(names) do\n",
+        "    names\n",
+        "    |> Enum.join(\", \")\n",
+        "    |> hello(language)\n",
+        "  end\n",
+        "\n",
+        "  def hello(name, language) when is_binary(name) do\n",
+        "    phrase(language) <> name\n",
+        "  end\n",
+        "\n",
+        "  defp phrase(\"en\"), do: \"hello, \"\n",
+        "  defp phrase(\"ja\"), do: \"こんにちは\"\n",
         "end\n",
+        "\n",
+        "IO.puts  Greeter.hello(\"alice\") #=> \"hello, alice\"\n",
+        "IO.puts  Greeter.hello([\"alice\", \"carroll\"]) #=> \"hello, alice, carroll\"\n",
+        "IO.puts  Greeter.hello([\"桃太郎\", \"金太郎\", \"浦島太郎\"], \"ja\") #=> \"こんにちは桃太郎, 金太郎, 浦島太郎\""
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MwPPsMplWDGy",
+        "outputId": "699bec54-f64c-4b48-9fb4-d87a7bdffcd7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello, alice\n",
+            "hello, alice, carroll\n",
+            "こんにちは桃太郎, 金太郎, 浦島太郎\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O0sPGxNcWnHL"
+      },
+      "source": [
+        "# 再帰 recursion"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ibVurPW8UwFZ"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3wpjzb_9WMbx"
+      },
+      "source": [
+        "再帰によるループ\n",
+        "\n",
+        "Elixirはデータがイミュータブルなので、他の関数型プログラミング言語と同じく、\n",
+        "ループ処理の書き方は命令型プログラミング言語と異なります。たとえば、\n",
+        "C#のような命令型言語では、配列要素の取り出しをつぎのように処理するでしょう。\n",
+        "\n",
+        "for (i = 0; i < sizeof(array); i++) {\n",
+        "  array[i] = array[i] * 2;\n",
+        "}\n",
+        "\n",
+        "上の例では配列とカウンタ変数のデータが書き替えられます。\n",
+        "Elixirはイミュータブルですのでデータは変えられません。\n",
+        "そこで、関数型言語では再帰を使うのです。\n",
+        "関数がみずからを再帰的に呼び出してループさせるのです。呼び出ししない条件に達したとき、再帰が終わります。\n",
+        "このやり方であれば、データが変わりません。\n",
+        "\n",
+        "以下の関数はリストの要素数を数えて返します。関数はふたつの句を備え、\n",
+        "引数でパターンマッチングされます。リストが空なら、ひとつ目の関数とマッチするので、\n",
+        "0が返され再帰呼び出しはしません。これが終了条件になります。\n",
+        "\n",
+        "リストに要素があれば、テイルを渡して再帰呼び出しし、その戻り値に1を加えます。\n",
+        "つまり、再帰呼び出しされるたびに1ずつカウントアップされ、空になったとき再帰は止まって合計値が返されるのです。\n",
+        "\n",
+        "defmodule Length do\n",
+        "  def of([]), do: 0\n",
+        "  def of([_ | tail]), do: 1 + of(tail)\n",
+        "end\n",
+        "iex> Length.of []\n",
+        "0\n",
+        "iex> Length.of [1, 2, 3]\n",
+        "3\n",
+        "なお、ふたつ目の関数でヘッドの変数は処理に使われません。使われない変数の頭にはアンダースコア_を添えるのがElixirの命名規則です。_で始まる変数に納めた値を取り出そうとすると警告が示されます。さらに、_のみを変数にしたとき、値の取り出しはコンパイルエラーになります。\n",
+        "iex> _x = 0\n",
+        "0\n",
+        "iex> _x\n",
+        "warning: the underscored variable \"_x\" is used after being set. A leading underscore indic\n",
+        "ates that the value of the variable should be ignored. If this is intended please rename t\n",
+        "he variable to remove the underscore\n",
+        "\n",
+        "0\n",
+        "iex> _ = 1\n",
+        "1\n",
+        "iex> _\n",
+        "** (CompileError) iex:n: invalid use of _. \"_\" represents a value to be ignored in a patte\n",
+        "rn and cannot be used in expressions\n",
+        "reduceとmapのアルゴリズム\n",
+        "まず、前掲のリストの要素数が返される関数を手直しして、要素の数値を合計してみましょう。関数に数値の第2引数を加え、ヘッダでデフォルト値0を与えました。加算される合計値を引数で受け渡せば、イミュータブルは破りません。\n",
+        "\n",
+        "ひとつ目の関数は、リストが空になったら引数の合計値を返して、再帰呼び出しは終わります。空でなかったらふたつ目の関数が、テイルと合計値を引数に再帰呼び出しして、ヘッドの値を加えます。つまり、つまり再帰のたびにヘッドの値を合計値に加えていくことになるのです。\n",
+        "defmodule Sum do\n",
+        "  def up(list, accumulator \\\\ 0)\n",
+        "  def up([], accumulator), do: accumulator\n",
+        "  def up([head | tail], accumulator),\n",
+        "    do: up(tail, head + accumulator)\n",
+        "end\n",
+        "iex> Sum.up([1, 2, 3])\n",
+        "6\n",
+        "iex> Sum.up([4, 5], 6)\n",
+        "15\n",
+        "リストから要素を順に取り出して、ひとつの値にまとめる処理はreduceアルゴリズムと呼ばれ、関数型プログラミングの重要な考え方のひとつです。\n",
+        "\n",
+        "つぎは、リスト要素に処理を加えて、新たなリストにつくりかえます。つぎの関数はリスト要素の数値を2乗して、それらが要素に納められた新たなリストとして返します。なお、|はふたつのリストをひとつにつなげる演算子にもなるのです(「Elixir入門 04: パターンマッチング」「演算子によるパターンマッチング」参照)。このようにリスト要素を取り出して、新たなリスト要素に納めて返す処理はmapアルゴリズムと呼ばれます。\n",
+        "defmodule Sum do\n",
+        "  def square([]), do: []\n",
+        "  def square([head | tail]), do:\n",
+        "    [head * head | square(tail)]\n",
+        "end\n",
+        "iex> Sum.square([1, 2, 3])\n",
+        "[1, 4, 9]\n",
+        "再帰と末尾呼び出しの最適化はElixirの重要なポイントで、ループ処理をするときにも活用されます(末尾再帰参照)。もっとも、Elixirのプログラミングでは、リストの操作に再帰を用いることはほとんどないでしょう。\n",
+        "\n",
+        "Enumモジュールに、リストで使える便利な機能がすでに用意されているからです。たとえば、関数Enum.reduce/3やEnum.map/2はつぎのように用います。\n",
+        "iex> Enum.reduce([1, 2, 3], 0, fn(x, acc) -> x + acc end)\n",
+        "6\n",
+        "iex> Enum.map([1, 2, 3], fn(x) -> x * x end)\n",
+        "[1, 4, 9]\n",
+        "さらに、キャプチャ構文でもっと短くも書けます。\n",
+        "iex> Enum.reduce([1, 2, 3], 0, &+/2)\n",
+        "6\n",
+        "iex> Enum.map([1, 2, 3], &(&1 * &1))\n",
+        "[1, 4, 9]\n",
+        "\n",
         "\n",
         "Elixir入門 09: 再帰\n",
         "Elixir入門 10: EnumとStream\n",
@@ -2409,8 +2587,7 @@
         "Elixir入門 22: Erlangライブラリ\n",
         "Elixir入門 23: つぎのステップ\n",
         "番外\n",
-        "Elixir入門: Plugを使うには\n",
-        "Discussion (0)\n"
+        "Elixir入門: Plugを使うには\n"
       ],
       "execution_count": null,
       "outputs": []
