--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyORi0EzNQydS5Bt4Luk+Jbg",
+      "authorship_tag": "ABX9TyOY+u4gGlxHDBOhpKfqGZNW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,33 +56,20 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6FkejEE2crA5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0750d93d-56ba-4d7d-eeea-cb7a33e4a55d"
+        "id": "6FkejEE2crA5"
       },
       "source": [
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/bin/bash: elixir: command not found\n",
-            "Wed Jun 23 09:02:45 UTC 2021\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2469,12 +2456,12 @@
       },
       "source": [
         "# reduceとmapのアルゴリズム\n",
+        "# リストから要素を順に取り出して、 1 つの値にまとめる処理は reduce アルゴリズムと呼ばれる\n",
         "# 次のプログラム要素の数値を合計する\n",
         "# 関数に数値の第 2 引数を加え、ヘッダでデフォルト値 0 を与える\n",
         "# 1 つ目の関数は、リストが空になったら引数の合計値を返して、再帰呼び出しは終わる\n",
         "# 空でなかったら 2 つ目の関数が、テイルと合計値を引数に再帰呼び出しして、ヘッドの値を加える\n",
         "# つまり再帰のたびにヘッドの値を合計値に加えていく\n",
-        "# リストから要素を順に取り出して、 1 つの値にまとめる処理は reduce アルゴリズムと呼ばれる\n",
         "%%writefile temp.exs\n",
         "defmodule Sum do\n",
         "  def up(list, accumulator \\\\ 0)\n",
@@ -2506,20 +2493,23 @@
         "id": "vgDv4eMEHVwf"
       },
       "source": [
-        "# リスト要素に処理を加えて、新たなリストにつくりかえます。つぎの関数はリスト要素の数値を2乗して、\n",
-        "それらが要素に納められた新たなリストとして返します。なお、|は 2 つのリストを 1 つにつなげる演算子にもなるのです\n",
-        "(「Elixir入門 04: パターンマッチング」「演算子によるパターンマッチング」参照)。このようにリスト要素を取り出して、\n",
-        "新たなリスト要素に納めて返す処理はmapアルゴリズムと呼ばれます。\n",
+        "# リスト要素に処理を加えて、新たなリスト要素に納めて返す処理は map アルゴリズムと呼ばれる\n",
+        "# つぎの関数はリスト要素の数値を 2 乗して、新たなリストとして返す\n",
+        "# なお、 `|` は 2 つのリストを 1 つにつなげる演算子にもなる\n",
+        "%%writefile temp.exs\n",
         "defmodule Sum do\n",
         "  def square([]), do: []\n",
         "  def square([head | tail]), do:\n",
         "    [head * head | square(tail)]\n",
         "end\n",
-        "iex> Sum.square([1, 2, 3])\n",
-        "[1, 4, 9]\n",
-        "再帰と末尾呼び出しの最適化はElixirの重要なポイントで、ループ処理をするときにも活用されます(末尾再帰参照)。もっとも、Elixirのプログラミングでは、リストの操作に再帰を用いることはほとんどないでしょう。\n",
         "\n",
-        "Enumモジュールに、リストで使える便利な機能がすでに用意されているからです。たとえば、関数Enum.reduce/3やEnum.map/2はつぎのように用います。\n",
+        "IO.inspect Sum.square([1, 2, 3]) #=> [1, 4, 9]\n",
+        "再帰と末尾呼び出しの最適化はElixirの重要なポイントで、\n",
+        "ループ処理をするときにも活用されます(末尾再帰参照)。もっとも、\n",
+        "Elixirのプログラミングでは、リストの操作に再帰を用いることはほとんどないでしょう。\n",
+        "\n",
+        "Enumモジュールに、リストで使える便利な機能がすでに用意されているからです。\n",
+        "たとえば、関数Enum.reduce/3やEnum.map/2はつぎのように用います。\n",
         "iex> Enum.reduce([1, 2, 3], 0, fn(x, acc) -> x + acc end)\n",
         "6\n",
         "iex> Enum.map([1, 2, 3], fn(x) -> x * x end)\n",
