--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOY+u4gGlxHDBOhpKfqGZNW",
+      "authorship_tag": "ABX9TyM8xy/RApkVfPNifGIAfSwE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "\n",
         "gumi TECH Blog Elixir入門\n",
         "\n",
-        "https://dev.to/gumi/elixir-09--1a0p\n",
+        "https://dev.to/gumi/elixir-10-enumstream-4fpb\n",
         "\n",
         "を colab 化する。\n",
         "\n",
@@ -514,15 +514,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zQtgx_c6eSWx"
+        "id": "zQtgx_c6eSWx",
+        "outputId": "33345d83-cb91-49b0-f5e3-b106668d614e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!elixir -e 'IO.puts is_atom :math'\n",
         "# !elixir -e 'IO.puts is_atom math' => error\n",
         "!elixir -e 'IO.puts :math.pow(2,100)'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "true\n",
+            "1.2676506002282294e30\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2441,15 +2454,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ibVurPW8UwFZ"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "3wpjzb_9WMbx"
@@ -2490,12 +2494,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vgDv4eMEHVwf"
+        "id": "vgDv4eMEHVwf",
+        "outputId": "ccc61628-d75d-4dd6-f9b3-9ba3ab2c12c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# リスト要素に処理を加えて、新たなリスト要素に納めて返す処理は map アルゴリズムと呼ばれる\n",
         "# つぎの関数はリスト要素の数値を 2 乗して、新たなリストとして返す\n",
-        "# なお、 `|` は 2 つのリストを 1 つにつなげる演算子にもなる\n",
+        "# なお、 `|` は 2 つのリストを 1 つにつなげる演算子になる\n",
         "%%writefile temp.exs\n",
         "defmodule Sum do\n",
         "  def square([]), do: []\n",
@@ -2503,41 +2511,303 @@
         "    [head * head | square(tail)]\n",
         "end\n",
         "\n",
-        "IO.inspect Sum.square([1, 2, 3]) #=> [1, 4, 9]\n",
-        "再帰と末尾呼び出しの最適化はElixirの重要なポイントで、\n",
-        "ループ処理をするときにも活用されます(末尾再帰参照)。もっとも、\n",
-        "Elixirのプログラミングでは、リストの操作に再帰を用いることはほとんどないでしょう。\n",
+        "IO.inspect Sum.square([1, 2, 3]) #=> [1, 4, 9]"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bGv7CtNv9jgr",
+        "outputId": "1d180aee-94d7-4678-bc78-dcdb09bb13e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 9]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Wh1mYlR9g02",
+        "outputId": "44e90c0d-8be4-44c5-961f-b1f06aa85b31",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 再帰と末尾呼び出しは末尾再帰 tail call と呼ばれ、map, reduce という関数で最適化されている\n",
+        "# このため elixir ではリストの操作に再帰を用いることはほとんどない\n",
+        "# 関数 Enum.reduce や Enum.map はつぎのように用いる\n",
         "\n",
-        "Enumモジュールに、リストで使える便利な機能がすでに用意されているからです。\n",
-        "たとえば、関数Enum.reduce/3やEnum.map/2はつぎのように用います。\n",
-        "iex> Enum.reduce([1, 2, 3], 0, fn(x, acc) -> x + acc end)\n",
-        "6\n",
-        "iex> Enum.map([1, 2, 3], fn(x) -> x * x end)\n",
+        "!elixir -e 'IO.inspect Enum.reduce([1, 2, 3], 0, fn(x, acc) -> x + acc end)'  #=> 6\n",
+        "!elixir -e 'IO.inspect Enum.map([1, 2, 3], fn(x) -> x * x end)'  #=> [1, 4, 9]\n",
+        "!echo\n",
+        "!elixir -e 'IO.inspect Enum.reduce([1, 2, 3], 0, &+/2)'  #=> 6\n",
+        "!elixir -e 'IO.inspect Enum.map([1, 2, 3], &(&1 * &1))'  #=> [1, 4, 9]"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n",
+            "[1, 4, 9]\n",
+            "\n",
+            "6\n",
+            "[1, 4, 9]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ibVurPW8UwFZ"
+      },
+      "source": [
+        "# Enum と Stream"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZKQ4pstDE7LT",
+        "outputId": "7952f3dd-164c-4ef6-9bc3-d8146543cdd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Enum モジュールは列挙型 enumerable のデータを扱う\n",
+        "# Enum.map 関数は、第 1 引数のリスト要素を第 2 引数の関数で処理し、新たなリストを得る\n",
+        "!elixir -e 'IO.inspect Enum.map([1, 2, 3], fn x -> x * x end)' #=> [1, 4, 9]\n",
+        "!elixir -e 'IO.inspect Enum.map([1, 2, 3], &(&1*&1))' #=> [1, 4, 9]\n",
+        "!elixir -e 'IO.inspect Enum.map([1, 2, 3], &(:math.pow(&1,2)))' #=> [1.0, 4.0, 9.0]"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 9]\n",
+            "[1, 4, 9]\n",
+            "[1.0, 4.0, 9.0]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T9EEQ-YvG65f",
+        "outputId": "1610e6c5-d905-4ab9-a150-06cc1819f5f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.inspect Enum.map(%{2 => :one, 4 => :two}, fn({k, v}) -> {v, div(k, 2)} end)'\n",
+        "#=> [one: 1, two: 2]"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[one: 1, two: 2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tSbzxaT-Iw2b"
+      },
+      "source": [
+        "メモ\n",
+        "\n",
+        "上の式の\n",
+        "\n",
+        "`fn({k, v}) -> {v, div(k, 2)} end`\n",
+        "\n",
+        "をキャプチャー演算子位で簡略化できるか"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aO8VJ_wG_pST"
+      },
+      "source": [
+        "Enumモジュールには多くの関数があり、変換や並べ替え、グループ化、フィルタ、項目の取り出しなどに用いられます\n",
+        "\n",
+        "Elixirの開発者にもっとも使われるモジュールのひとつです\n",
+        "\n",
+        "Enumの関数はさまざまな列挙可能なデータ型に使える多態性をもちます\n",
+        "扱うデータはEnumerableプロトコルを実装していればよいのです\n",
+        "\n",
+        "\n",
+        "連番整数のデータは../2でも表せます\n",
+        "Enum.reduce/3は、各データを処理してひとつの値にして返す関数です\n",
+        "第1引数のデータを第3引数の関数で処理し、その戻り値がつぎのデータのコールバックに渡されます\n",
+        "第2引数は最初のデータのコールバックに渡される初期値です\n",
+        "\n",
+        "IO.inspect Enum.map(1..3, &(&1 * &1))\n",
         "[1, 4, 9]\n",
-        "さらに、キャプチャ構文でもっと短くも書けます。\n",
-        "iex> Enum.reduce([1, 2, 3], 0, &+/2)\n",
+        "IO.inspect Enum.reduce(1..3, 0, &+/2)\n",
         "6\n",
-        "iex> Enum.map([1, 2, 3], &(&1 * &1))\n",
+        "なお、&+/2は+/2を&演算子でキャプチャしています(「Elixir入門 08: モジュールと関数」「関数のキャプチャ」参照)\n",
+        "\n",
+        "\n",
+        "Enumモジュールの関数の仕事は、データ構造の要素をすべて取り出して処理すること(列挙)にかぎられます\n",
+        "要素を差し込んだり、値を書き替えるには、そのデータ型にもとづく操作が必要です\n",
+        "たとえばリストのインデックスに値を差し込むのなら、ListモジュールのList.insert_at/3をお使いください\n",
+        "\n",
+        "\n",
+        "パイプ演算子\n",
+        "パイプ演算子|>は左オペランドの値を左オペランドの第1引数に渡します\n",
+        "なお、List.flatten/1は、引数に渡したリスト内の入れ子を平坦化する関数です\n",
+        "\n",
+        "IO.inspect [1, [[2], 3]] |> List.flatten\n",
+        "[1, 2, 3]\n",
+        "関数の戻り値をつぎの関数の引数に渡す処理が重なると、関数が入れ子になります\n",
+        "\n",
+        "IO.inspect Enum.reduce(Enum.map(1..3, fn x -> x * x end), 0, fn(x, acc) -> x + acc end )\n",
+        "14\n",
+        "|>演算子はこうした場合に、左の出力を右に入力するという見やすい書き方にできるのです\n",
+        "つぎの例ではキャプチャ演算子&も併せて使いました\n",
+        "\n",
+        "IO.inspect 1..3 |> Enum.map(&(&1 * &1)) |> Enum.reduce(0, &+/2)\n",
+        "14\n",
+        "Enum.reduce/3は使い道の広い関数です\n",
+        "けれど、ただすべての要素を足せばよいときはEnum.sum/1が使えます\n",
+        "\n",
+        "IO.inspect 1..3 |> Enum.map(&(&1 * &1)) |> Enum.sum\n",
+        "14\n",
+        "なお、パイプ演算子|>を使うとき、関数に第2引数以降がある場合には、引数をかっこ()でかこんでください\n",
+        "たとえば、List.flatten/2は第2引数のリストをつないだうえで平坦化します\n",
+        "このとき()を省くと、加えるように警告が示されます\n",
+        "コードに誤解を招きやすくなるからです\n",
+        "\n",
+        "IO.inspect [1, [[2], 3]] |> List.flatten [4, [5]]\n",
+        "warning: parentheses are required when piping into a function call. For example:\n",
+        "\n",
+        "    foo 1 |> bar 2 |> baz 3\n",
+        "\n",
+        "is ambiguous and should be written as\n",
+        "\n",
+        "    foo(1) |> bar(2) |> baz(3)\n",
+        "\n",
+        "Ambiguous pipe found at:\n",
+        "  iex:\n",
+        "\n",
+        "[1, 2, 3, 4, [5]]\n",
+        "先行と遅延\n",
+        "Enumモジュールの関数はすべて先行処理です\n",
+        "たとえば、上のコードはつぎの処理と同じく、ひとつ目の関数が直ちに戻り値のリストを返し、そのデータからふたつ目の関数が結果のリストをつくります\n",
+        "つまり、関数の呼び出しがいくつも重なると、その数だけ途中経過のリストができるのです\n",
+        "さらにデータの要素数が膨大になれば、その負荷を考えなければならないかもしれません\n",
+        "\n",
+        "IO.inspect square = Enum.map(1..3, &(&1 * &1))\n",
         "[1, 4, 9]\n",
+        "IO.inspect sum = Enum.sum(square)\n",
+        "14\n",
+        "Streamモジュールは、Enumと同じようにEnumerableプロトコルのデータを扱う関数が備わり、しかも遅延処理です\n",
+        "つまり、処理を求められるまで、データの取り出し(列挙)は行いません\n",
         "\n",
         "\n",
-        "Elixir入門 09: 再帰\n",
-        "Elixir入門 10: EnumとStream\n",
-        "Elixir入門 11: プロセス\n",
-        "Elixir入門 12: 入出力とファイルシステム\n",
-        "Elixir入門 13: aliasとrequireおよびimport\n",
-        "Elixir入門 14: モジュールの属性\n",
-        "Elixir入門 15: 構造体\n",
-        "Elixir入門 16: プロトコル\n",
-        "Elixir入門 17: 内包表記\n",
-        "Elixir入門 18: シギル\n",
-        "Elixir入門 19: tryとcatchおよびrescue\n",
-        "Elixir入門 20: 型の仕様とビヘイビア\n",
-        "Elixir入門 21: デバッグ\n",
-        "Elixir入門 22: Erlangライブラリ\n",
-        "Elixir入門 23: つぎのステップ\n",
-        "番外\n",
-        "Elixir入門: Plugを使うには\n"
+        "Stream\n",
+        "Streamは、複数の関数が組み合わせられる遅延処理の列挙型です\n",
+        "Streamは、列挙の処理がいくつ続いても、データから要素をひとつずつ取り出します\n",
+        "つまり、途中経過のリストはつくりません\n",
+        "\n",
+        "\n",
+        "たとえば、../2で定めた連番整数はStreamです\n",
+        "Streamに対してEnumの関数を呼び出すと、データは遅延実行されます\n",
+        "なお、Stream.filter/2は、第2引数のコールバックがtrueを返す要素だけ取り出します\n",
+        "\n",
+        "IO.inspect range = 1..6\n",
+        "1..6\n",
+        "IO.inspect odd = Stream.filter(range, &(rem(&1, 2) != 0))\n",
+        "#Stream<[enum: 1..6, funs: [#Function<40.58052446/1 in Stream.filter/2>]]>\n",
+        "IO.inspect square = Stream.map(odd, &(&1 * &1))\n",
+        "#Stream<[\n",
+        "  enum: 1..6,\n",
+        "  funs: [#Function<40.58052446/1 in Stream.filter/2>,\n",
+        "   #Function<48.58052446/1 in Stream.map/2>]\n",
+        "]>\n",
+        "IO.inspect sum = Enum.reduce(square, 0, &(&1 + &2))\n",
+        "35\n",
+        "Streamは、途中経過のリストはつくらず、列挙処理の手順を表します\n",
+        "そして、Enumモジュールの関数に渡されたとき、もとのデータから項目をひとつずつ取り出すのです\n",
+        "Streamは膨大なデータを扱うとき有効です\n",
+        "無限のデータでもつくれます\n",
+        "\n",
+        "\n",
+        "Streamモジュールは、Enumerableプロトコルのデータを扱う多くの関数が備わり、戻り値はStreamです\n",
+        "また、指定にしたがったStreamをつくる関数もあります\n",
+        "たとえば、Stream.cycle/1は引数の列挙型データから無限のStreamを返す関数です\n",
+        "Enumの列挙する関数に渡すと、処理が終わらなくなるので気をつけましょう\n",
+        "Enum.take/2は、引数の数だけ取り出して処理します\n",
+        "\n",
+        "IO.inspect [1, 2, 3] |> Stream.cycle |> Enum.take(10)\n",
+        "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1]\n",
+        "Stream.unfold/2の処理の流れは、Enum.reduce/3と似ています\n",
+        "ただ、コールバック間で受け渡すデータがタプル{現在値, 集計値}のかたちをとるのです\n",
+        "そして、第1引数は初期値になります\n",
+        "\n",
+        "\n",
+        "数学の数列で第1項と第2項を決めて、それ以降の数を求める考え方です\n",
+        "コールバックに終了のための処理がないかぎり無限のStreamになります\n",
+        "たとえば、つぎのコードはフィボナッチ数列から10項を取り出してリストで返します\n",
+        "\n",
+        "IO.inspect fibs = Stream.unfold({1, 1}, fn({n0, n1}) -> {n0, {n1, n0 + n1}} end)\n",
+        "#Function<64.58052446/2 in Stream.unfold/2>\n",
+        "IO.inspect Enum.take(fibs, 10)\n",
+        "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]\n",
+        "File.stream!/3は、引数のパスから読み込んだファイルをStream(File.stream)にします\n",
+        "ストリーミングをはじめると、ファイルはElixirが自動的に開きます\n",
+        "そして、読み込み終わるか、失敗すると閉じられるのです\n",
+        "読み込まれたファイルが処理されると、行単位で要素に分けられたリストになります\n",
+        "\n",
+        "IO.inspect stream = File.stream!(\"test.txt\")\n",
+        "%File.Stream{\n",
+        "  line_or_bytes: :line,\n",
+        "  modes: [:raw, :read_ahead, :binary],\n",
+        "  path: \"test.txt\",\n",
+        "  raw: true\n",
+        "}\n",
+        "IO.inspect Enum.take(stream, 10)\n",
+        "Streamは大きなファイルやネットワークの重いリソースを扱うのに適しています\n",
+        "はじめはEnumを使って慣れていくのがよいでしょう\n",
+        "遅延処理が必要になったり、重いリソースや膨大なデータを扱うようになったとき、Streamの利用をお考えください\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
