--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM8xy/RApkVfPNifGIAfSwE",
+      "authorship_tag": "ABX9TyNoNGmECCYrvedxSuBSDpuC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "THvpbkjdWs0Q"
+        "id": "THvpbkjdWs0Q",
+        "outputId": "8bd2c9aa-b0c9-425f-fdd0-d585c588d755",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        }
       },
       "source": [
         "%%capture\n",
@@ -56,8 +61,17 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-946e5fa47576>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    %%capture\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -514,28 +528,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zQtgx_c6eSWx",
-        "outputId": "33345d83-cb91-49b0-f5e3-b106668d614e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "zQtgx_c6eSWx"
       },
       "source": [
         "!elixir -e 'IO.puts is_atom :math'\n",
         "# !elixir -e 'IO.puts is_atom math' => error\n",
         "!elixir -e 'IO.puts :math.pow(2,100)'"
       ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "true\n",
-            "1.2676506002282294e30\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2494,11 +2495,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vgDv4eMEHVwf",
-        "outputId": "ccc61628-d75d-4dd6-f9b3-9ba3ab2c12c9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "vgDv4eMEHVwf"
       },
       "source": [
         "# リスト要素に処理を加えて、新たなリスト要素に納めて返す処理は map アルゴリズムと呼ばれる\n",
@@ -2513,48 +2510,24 @@
         "\n",
         "IO.inspect Sum.square([1, 2, 3]) #=> [1, 4, 9]"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting temp.exs\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bGv7CtNv9jgr",
-        "outputId": "1d180aee-94d7-4678-bc78-dcdb09bb13e0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "bGv7CtNv9jgr"
       },
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[1, 4, 9]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Wh1mYlR9g02",
-        "outputId": "44e90c0d-8be4-44c5-961f-b1f06aa85b31",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "2Wh1mYlR9g02"
       },
       "source": [
         "# 再帰と末尾呼び出しは末尾再帰 tail call と呼ばれ、map, reduce という関数で最適化されている\n",
@@ -2567,20 +2540,8 @@
         "!elixir -e 'IO.inspect Enum.reduce([1, 2, 3], 0, &+/2)'  #=> 6\n",
         "!elixir -e 'IO.inspect Enum.map([1, 2, 3], &(&1 * &1))'  #=> [1, 4, 9]"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "6\n",
-            "[1, 4, 9]\n",
-            "\n",
-            "6\n",
-            "[1, 4, 9]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2594,11 +2555,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZKQ4pstDE7LT",
-        "outputId": "7952f3dd-164c-4ef6-9bc3-d8146543cdd3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ZKQ4pstDE7LT"
       },
       "source": [
         "# Enum モジュールは列挙型 enumerable のデータを扱う\n",
@@ -2607,42 +2564,20 @@
         "!elixir -e 'IO.inspect Enum.map([1, 2, 3], &(&1*&1))' #=> [1, 4, 9]\n",
         "!elixir -e 'IO.inspect Enum.map([1, 2, 3], &(:math.pow(&1,2)))' #=> [1.0, 4.0, 9.0]"
       ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[1, 4, 9]\n",
-            "[1, 4, 9]\n",
-            "[1.0, 4.0, 9.0]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T9EEQ-YvG65f",
-        "outputId": "1610e6c5-d905-4ab9-a150-06cc1819f5f0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "T9EEQ-YvG65f"
       },
       "source": [
         "!elixir -e 'IO.inspect Enum.map(%{2 => :one, 4 => :two}, fn({k, v}) -> {v, div(k, 2)} end)'\n",
         "#=> [one: 1, two: 2]"
       ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[one: 1, two: 2]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2660,43 +2595,97 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0yAPFIWnvYW3"
+      },
+      "source": [
+        "**Enum モジュール**\n",
+        "\n",
+        "Enum モジュールには多くの関数があり、変換や並べ替え、グループ化、フィルタ、項目の取り出しなどに用いられる。\n",
+        "\n",
+        "Elixir の開発で最も使われるモジュールのひとつである。\n",
+        "\n",
+        "扱うデータは Enumerable プロトコルを実装していればよい。\n",
+        "\n",
+        "cf. 列挙型、コレクション、リスト\n",
+        "\n",
+        "* all?、any?\n",
+        "* chunk_every、chunk_by、map_every\n",
+        "* each\n",
+        "* map、filter、reduce\n",
+        "* min、max\n",
+        "* sort、uniq、uniq_by\n",
+        "* キャプチャ演算子 `(&)`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LLTUf9UIwU5j",
+        "outputId": "c372a84d-de80-45f4-a391-57b4c8b45ba1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 連番整数のデータは `../2` で表せる\n",
+        "# Enum.reduce は、各データを処理してひとつの値にして返す関数\n",
+        "# 第 1 引数のデータを第 3 引数の関数で処理し、その戻り値がつぎのデータのコールバックに渡される\n",
+        "# 第 2 引数は最初のデータのコールバックに渡される初期値である\n",
+        "!elixir -e 'IO.inspect Enum.map(1..3, &(&1 * &1))' #=> [1, 4, 9]\n",
+        "!elixir -e 'IO.inspect Enum.reduce(1..3, 0, &+/2)' #=> 6 \n",
+        "# `&` はキャプチャー演算子\n",
+        "# Enum モジュールの仕事は、データの要素の処理 (列挙) に限られる\n",
+        "# 要素を差し込んだり、値を書き替えるには、そのデータ型にもとづく操作が必要\n",
+        "# 例えばリストに値を差し込むのなら、List モジュールの List.insert_at を使う"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 9]\n",
+            "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9LGfK3z1-lR7",
+        "outputId": "94be7e07-d590-449e-a88f-97b7b777b1de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# パイプ演算子\n",
+        "# パイプ演算子 `|>` は左オペランドの値を左オペランドの第 1 引数に渡す\n",
+        "# なお、List.flatten 1は、引数に渡したリスト内の入れ子を平坦化する関数\n",
+        "!elixir -e 'IO.inspect [1, [[2], 3]] |> List.flatten' #=> [1, 2, 3]"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "aO8VJ_wG_pST"
       },
       "source": [
-        "Enumモジュールには多くの関数があり、変換や並べ替え、グループ化、フィルタ、項目の取り出しなどに用いられます\n",
-        "\n",
-        "Elixirの開発者にもっとも使われるモジュールのひとつです\n",
-        "\n",
-        "Enumの関数はさまざまな列挙可能なデータ型に使える多態性をもちます\n",
-        "扱うデータはEnumerableプロトコルを実装していればよいのです\n",
-        "\n",
-        "\n",
-        "連番整数のデータは../2でも表せます\n",
-        "Enum.reduce/3は、各データを処理してひとつの値にして返す関数です\n",
-        "第1引数のデータを第3引数の関数で処理し、その戻り値がつぎのデータのコールバックに渡されます\n",
-        "第2引数は最初のデータのコールバックに渡される初期値です\n",
-        "\n",
-        "IO.inspect Enum.map(1..3, &(&1 * &1))\n",
-        "[1, 4, 9]\n",
-        "IO.inspect Enum.reduce(1..3, 0, &+/2)\n",
-        "6\n",
-        "なお、&+/2は+/2を&演算子でキャプチャしています(「Elixir入門 08: モジュールと関数」「関数のキャプチャ」参照)\n",
-        "\n",
-        "\n",
-        "Enumモジュールの関数の仕事は、データ構造の要素をすべて取り出して処理すること(列挙)にかぎられます\n",
-        "要素を差し込んだり、値を書き替えるには、そのデータ型にもとづく操作が必要です\n",
-        "たとえばリストのインデックスに値を差し込むのなら、ListモジュールのList.insert_at/3をお使いください\n",
-        "\n",
-        "\n",
-        "パイプ演算子\n",
-        "パイプ演算子|>は左オペランドの値を左オペランドの第1引数に渡します\n",
-        "なお、List.flatten/1は、引数に渡したリスト内の入れ子を平坦化する関数です\n",
-        "\n",
-        "IO.inspect [1, [[2], 3]] |> List.flatten\n",
-        "[1, 2, 3]\n",
-        "関数の戻り値をつぎの関数の引数に渡す処理が重なると、関数が入れ子になります\n",
+        "# 関数の戻り値をつぎの関数の引数に渡す処理が重なると、関数が入れ子になる\n",
+        "# こうした場合にパイプ演算子 `|> は左の出力を右に入力するという見やすい書き方にできる\n",
         "\n",
         "IO.inspect Enum.reduce(Enum.map(1..3, fn x -> x * x end), 0, fn(x, acc) -> x + acc end )\n",
         "14\n",
