--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPHjqv+eTePdwi3JDAs+F02",
+      "authorship_tag": "ABX9TyPCk1hkViz6PpDLDWpytL0t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,33 +56,20 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6FkejEE2crA5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a525b3ba-e51d-4668-84cb-8bc5bc5d4ba0"
+        "id": "6FkejEE2crA5"
       },
       "source": [
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/bin/bash: elixir: command not found\n",
-            "Fri Jun 25 00:07:22 UTC 2021\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -750,38 +737,77 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2QD3h5Hi33UU"
+        "id": "2QD3h5Hi33UU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0a7c19e5-813a-4008-9d3e-d22727699adf"
       },
       "source": [
         "!elixir -e 'IO.inspect {3.14, :pie, \"Apple\"}'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{3.14, :pie, \"Apple\"}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rh0RBDBF8CQj"
+        "id": "rh0RBDBF8CQj",
+        "outputId": "9b799805-8f45-4297-961f-e7d9020dca60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!elixir -e 'IO.inspect tuple_size {3.14, :pie, \"Apple\"}'\n",
         "!elixir -e 'IO.inspect length Tuple.to_list {3.14, :pie, \"Apple\"}'\n",
         "!elixir -e 'tuple = {3.14, :pie, \"Apple\"}; IO.inspect put_elem(tuple,2,\"Cherry\")'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "3\n",
+            "{3.14, :pie, \"Cherry\"}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S8zPbpT4qw1g"
+        "id": "S8zPbpT4qw1g",
+        "outputId": "659c690e-bb97-483d-9f26-eab5ce9ec465",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!elixir -e 'IO.inspect tuple = {:ok, \"hello\"}'\n",
         "!elixir -e 'tuple = {:ok, \"hello\"};IO.inspect elem(tuple, 1)'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{:ok, \"hello\"}\n",
+            "\"hello\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1353,7 +1379,7 @@
         "**文字リスト charlist について**\n",
         "\n",
         "* 文字リストはコードポイントのリストである\n",
-        "* シングルクォーテーションで囲んだリテラルによりつくる\n",
+        "* シングルクォーテーションで囲んだリテラルにより作る\n",
         "* ダブルクォーテーション(\"\")は文字列つまりバイナリ、シングルクォーテーションは文字リストを表す"
       ]
     },
@@ -1892,7 +1918,7 @@
         "\n",
         "たとえば、String.length は UTF-8 の Unicode 文字数を調べる String モジュールの関数である。\n",
         "\n",
-        "モジュールをつくるには、defmodule マクロを用いる。\n",
+        "モジュールを作るには、defmodule マクロを用いる。\n",
         "\n",
         "モジュールの中に関数を作るのが def マクロである。"
       ]
@@ -2604,7 +2630,7 @@
         "\n",
         "Enum モジュールには多くの関数があり、変換や並べ替え、グループ化、フィルタ、項目の取り出しなどに用いられる。\n",
         "\n",
-        "Elixir の開発で最も使われるモジュールのひとつである。\n",
+        "Elixir の開発で最も使われるモジュールの1 つである。\n",
         "\n",
         "扱うデータは Enumerable プロトコルを実装していればよい。\n",
         "\n",
@@ -2622,15 +2648,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LLTUf9UIwU5j",
-        "outputId": "c372a84d-de80-45f4-a391-57b4c8b45ba1"
+        "id": "LLTUf9UIwU5j"
       },
       "source": [
         "# 連番整数のデータは `../2` で表せる\n",
-        "# Enum.reduce は、各データを処理してひとつの値にして返す関数\n",
+        "# Enum.reduce は、各データを処理して1 つの値にして返す関数\n",
         "# 第 1 引数のデータを第 3 引数の関数で処理し、その戻り値がつぎのデータのコールバックに渡される\n",
         "# 第 2 引数は最初のデータのコールバックに渡される初期値である\n",
         "!elixir -e 'IO.inspect Enum.map(1..3, &(&1 * &1))' #=> [1, 4, 9]\n",
@@ -2640,13 +2662,43 @@
         "# 要素を差し込んだり、値を書き替えるには、そのデータ型にもとづく操作が必要\n",
         "# 例えばリストに値を差し込むのなら、List モジュールの List.insert_at を使う"
       ],
-      "execution_count": 7,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9LGfK3z1-lR7"
+      },
+      "source": [
+        "# パイプ演算子\n",
+        "# パイプ演算子 `|>` は左オペランドの値を左オペランドの第 1 引数に渡す\n",
+        "# なお、List.flatten 1は、引数に渡したリスト内の入れ子を平坦化する関数\n",
+        "!elixir -e 'IO.inspect [1, [[2], 3]] |> List.flatten' #=> [1, 2, 3]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aO8VJ_wG_pST",
+        "outputId": "dc487d79-e5f1-4c16-fa82-0d3f4eac63e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 関数の戻り値をつぎの関数の引数に渡す処理が重なると、関数が入れ子になる\n",
+        "# こうした場合にパイプ演算子 `|>` は左の出力を右に入力するという見やすい書き方にできる\n",
+        "!elixir -e 'IO.inspect Enum.reduce(Enum.map(1..3, fn x -> x * x end), 0, fn(x, acc) -> x + acc end )' #=> 14"
+      ],
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[1, 4, 9]\n",
-            "6\n"
+            "14\n"
           ],
           "name": "stdout"
         }
@@ -2655,24 +2707,190 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "yX_0hwd8csTk",
+        "outputId": "e3cb9101-ccb3-49dd-86c6-151f9321fedc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "9LGfK3z1-lR7",
-        "outputId": "94be7e07-d590-449e-a88f-97b7b777b1de"
+        }
       },
       "source": [
-        "# パイプ演算子\n",
-        "# パイプ演算子 `|>` は左オペランドの値を左オペランドの第 1 引数に渡す\n",
-        "# なお、List.flatten 1は、引数に渡したリスト内の入れ子を平坦化する関数\n",
-        "!elixir -e 'IO.inspect [1, [[2], 3]] |> List.flatten' #=> [1, 2, 3]"
+        "# キャプチャー演算子 `&` も併せて使う\n",
+        "!elixir -e 'IO.inspect 1..3 |> Enum.map(&(&1 * &1)) |> Enum.reduce(0, &+/2)' #=> 14"
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[1, 2, 3]\n"
+            "14\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "memshVhsciUv",
+        "outputId": "4965e7c5-e46f-4719-c0f1-325f915480fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# ただすべての要素を足せばよいときは Enum.sum が使える\n",
+        "!elixir -e 'IO.inspect 1..3 |> Enum.map(&(&1 * &1)) |> Enum.sum' #=> 14"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "14\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WwOn4NjpdOYw"
+      },
+      "source": [
+        "# パイプ演算子 `|>` を使うとき、関数に第 2 引数以降がある場合には、引数をかっこ()で囲む\n",
+        "# そうしないと警告が出る\n",
+        "!elixir -e 'IO.inspect [1, [[2], 3]] |> List.flatten([4, [5]])' #=> [1, 2, 3, 4, [5]]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8PgOOT6EdsPy",
+        "outputId": "d98dbc15-b79c-4c46-c77b-6709ffc0d4cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 先行と遅延\n",
+        "# Enum モジュールはすべて先行処理である\n",
+        "# 1 つ目の関数が直ちに戻り値のリストを返し、そのデータから 2 つ目の関数が結果のリストを作る\n",
+        "# データの要素数が膨大になれば、その負荷を考えなければならない\n",
+        "!elixir -e 'IO.inspect square = Enum.map(1..3, &(&1 * &1))' #=> [1,4,9]\n",
+        "!elixir -e ' square = Enum.map(1..3, &(&1 * &1)); IO.inspect sum = Enum.sum(square)' #=> 14"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 9]\n",
+            "14\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qKLDgJCafXcC",
+        "outputId": "3e4f1da9-2170-4244-a1ec-37aa0e15102f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Stream モジュールは、Enum と同じように Enumerable プロトコルのデータを扱うが\n",
+        "# 遅延処理である。 処理を求められるまで、データの取り出し (列挙) は行わない\n",
+        "# Stream 型は遅延処理の列挙型である\n",
+        "# 例えば `../2` で定めた連番整数は Stream 型である\n",
+        "# Stream に対して Enum の関数を呼び出すと、データは遅延実行される\n",
+        "# Stream.filter は、第 2 引数のコールバックが true を返す要素だけ取り出す\n",
+        "!elixir -e 'IO.inspect range = 1..6'\n",
+        "!elixir -e 'range = 1..6; IO.inspect odd = Stream.filter(range, &(rem(&1, 2) != 0))'\n",
+        "!elixir -e 'range = 1..6; odd = Stream.filter(range, &(rem(&1, 2) != 0)); IO.inspect square = Stream.map(odd, &(&1 * &1))'\n",
+        "!elixir -e 'range = 1..6; odd = Stream.filter(range, &(rem(&1, 2) != 0)); square = Stream.map(odd, &(&1 * &1)); IO.inspect sum = Enum.reduce(square, 0, &(&1 + &2))'"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1..6\n",
+            "#Stream<[enum: 1..6, funs: [#Function<39.58486609/1 in Stream.filter/2>]]>\n",
+            "#Stream<[\n",
+            "  enum: 1..6,\n",
+            "  funs: [#Function<39.58486609/1 in Stream.filter/2>,\n",
+            "   #Function<47.58486609/1 in Stream.map/2>]\n",
+            "]>\n",
+            "35\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tZHXmHH9gnSe",
+        "outputId": "68ec44be-8a6c-4089-e766-d6d487bfb510",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Stream は、途中経過のリストはつくらず、列挙処理の手順を表す\n",
+        "# そして、Enumモジュールの関数に渡されたとき、もとのデータから項目を 1 つずつ取り出す\n",
+        "# Stream は膨大なデータを扱うときや、無限を扱う時に有効である\n",
+        "# Stream モジュールの関数は、Enumerable のデータを扱い、戻り値はStreamです\n",
+        "# また、 Stream を作る関数もある\n",
+        "# 、Stream.cycle は引数の列挙型データから無限の Stream を返す\n",
+        "# そのまま Enum の関数に渡すと、処理が終わらなくなる\n",
+        "# Enum.take は、引数の数だけ取り出して処理する\n",
+        "!elixir -e 'IO.inspect [1, 2, 3] |> Stream.cycle |> Enum.take(10)'\n",
+        "#=> [1, 2, 3, 1, 2, 3, 1, 2, 3, 1]"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JUlMhsehn1ac",
+        "outputId": "9aa6d55c-ba9e-4ae7-ff83-e3cd6b80fdae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Stream.unfold の処理は、Enum.reduce と似ている\n",
+        "# ただし、コールバック間で受け渡すデータがタプル {現在値, 集計値} の形をとる\n",
+        "# 第 1 引数は初期値である\n",
+        "# 数学の数列で第1項と第2項を決めて、それ以降の数を求める考え方である\n",
+        "# 終了のための処理がないかぎり無限のStreamになる\n",
+        "# 次のコードはフィボナッチ数列から10項を取り出してリストで返す\n",
+        "!elixir -e 'IO.inspect fibs = Stream.unfold({1, 1}, fn({n0, n1}) -> {n0, {n1, n0 + n1}} end)'\n",
+        "!elixir -e 'fibs = Stream.unfold({1, 1}, fn({n0, n1}) -> {n0, {n1, n0 + n1}} end); IO.inspect Enum.take(fibs, 10)'"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#Function<61.58486609/2 in Stream.unfold/2>\n",
+            "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]\n"
           ],
           "name": "stdout"
         }
@@ -2690,105 +2908,81 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aO8VJ_wG_pST"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GDFrUoFMp_q_",
+        "outputId": "771475ea-103c-4b9b-ae08-1b7a6b13e371"
       },
       "source": [
-        "# 関数の戻り値をつぎの関数の引数に渡す処理が重なると、関数が入れ子になる\n",
-        "# こうした場合にパイプ演算子 `|> は左の出力を右に入力するという見やすい書き方にできる\n",
+        "!elixir -e 'IO.inspect {3.14, :pie, \"Apple\"}'"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{3.14, :pie, \"Apple\"}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4YidokqVqLI_",
+        "outputId": "66e487d3-9083-4e22-ea6c-c91e931daf05"
+      },
+      "source": [
+        "!elixir -e 'IO.inspect {1.0, :pie}'"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{1.0, :pie}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ILYXJOKppPJk",
+        "outputId": "e6c5c4b7-62ee-46c5-ce2c-da00fa998640",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'IO.inspect({1,2})'"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "** (SyntaxError) nofile:1:17: syntax error before: ')'\n",
+            "    (elixir 1.12.0) lib/code.ex:655: Code.eval_string_with_error_handling/3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1USg_wk1oqDB"
+      },
+      "source": [
         "\n",
-        "IO.inspect Enum.reduce(Enum.map(1..3, fn x -> x * x end), 0, fn(x, acc) -> x + acc end )\n",
-        "14\n",
-        "|>演算子はこうした場合に、左の出力を右に入力するという見やすい書き方にできるのです\n",
-        "つぎの例ではキャプチャ演算子&も併せて使いました\n",
-        "\n",
-        "IO.inspect 1..3 |> Enum.map(&(&1 * &1)) |> Enum.reduce(0, &+/2)\n",
-        "14\n",
-        "Enum.reduce/3は使い道の広い関数です\n",
-        "けれど、ただすべての要素を足せばよいときはEnum.sum/1が使えます\n",
-        "\n",
-        "IO.inspect 1..3 |> Enum.map(&(&1 * &1)) |> Enum.sum\n",
-        "14\n",
-        "なお、パイプ演算子|>を使うとき、関数に第2引数以降がある場合には、引数をかっこ()でかこんでください\n",
-        "たとえば、List.flatten/2は第2引数のリストをつないだうえで平坦化します\n",
-        "このとき()を省くと、加えるように警告が示されます\n",
-        "コードに誤解を招きやすくなるからです\n",
-        "\n",
-        "IO.inspect [1, [[2], 3]] |> List.flatten [4, [5]]\n",
-        "warning: parentheses are required when piping into a function call. For example:\n",
-        "\n",
-        "    foo 1 |> bar 2 |> baz 3\n",
-        "\n",
-        "is ambiguous and should be written as\n",
-        "\n",
-        "    foo(1) |> bar(2) |> baz(3)\n",
-        "\n",
-        "Ambiguous pipe found at:\n",
-        "  iex:\n",
-        "\n",
-        "\n",
-        "\n",
-        "先行と遅延\n",
-        "Enumモジュールの関数はすべて先行処理です\n",
-        "たとえば、上のコードはつぎの処理と同じく、ひとつ目の関数が直ちに戻り値のリストを返し、そのデータからふたつ目の関数が結果のリストをつくります\n",
-        "つまり、関数の呼び出しがいくつも重なると、その数だけ途中経過のリストができるのです\n",
-        "さらにデータの要素数が膨大になれば、その負荷を考えなければならないかもしれません\n",
-        "\n",
-        "IO.inspect square = Enum.map(1..3, &(&1 * &1))\n",
-        "[1, 4, 9]\n",
-        "IO.inspect sum = Enum.sum(square)\n",
-        "14\n",
-        "Streamモジュールは、Enumと同じようにEnumerableプロトコルのデータを扱う関数が備わり、しかも遅延処理です\n",
-        "つまり、処理を求められるまで、データの取り出し(列挙)は行いません\n",
-        "\n",
-        "\n",
-        "Stream\n",
-        "Streamは、複数の関数が組み合わせられる遅延処理の列挙型です\n",
-        "Streamは、列挙の処理がいくつ続いても、データから要素をひとつずつ取り出します\n",
-        "つまり、途中経過のリストはつくりません\n",
-        "\n",
-        "\n",
-        "たとえば、../2で定めた連番整数はStreamです\n",
-        "Streamに対してEnumの関数を呼び出すと、データは遅延実行されます\n",
-        "なお、Stream.filter/2は、第2引数のコールバックがtrueを返す要素だけ取り出します\n",
-        "\n",
-        "IO.inspect range = 1..6\n",
-        "1..6\n",
-        "IO.inspect odd = Stream.filter(range, &(rem(&1, 2) != 0))\n",
-        "#Stream<[enum: 1..6, funs: [#Function<40.58052446/1 in Stream.filter/2>]]>\n",
-        "IO.inspect square = Stream.map(odd, &(&1 * &1))\n",
-        "#Stream<[\n",
-        "  enum: 1..6,\n",
-        "  funs: [#Function<40.58052446/1 in Stream.filter/2>,\n",
-        "   #Function<48.58052446/1 in Stream.map/2>]\n",
-        "]>\n",
-        "IO.inspect sum = Enum.reduce(square, 0, &(&1 + &2))\n",
-        "35\n",
-        "Streamは、途中経過のリストはつくらず、列挙処理の手順を表します\n",
-        "そして、Enumモジュールの関数に渡されたとき、もとのデータから項目をひとつずつ取り出すのです\n",
-        "Streamは膨大なデータを扱うとき有効です\n",
-        "無限のデータでもつくれます\n",
-        "\n",
-        "\n",
-        "Streamモジュールは、Enumerableプロトコルのデータを扱う多くの関数が備わり、戻り値はStreamです\n",
-        "また、指定にしたがったStreamをつくる関数もあります\n",
-        "たとえば、Stream.cycle/1は引数の列挙型データから無限のStreamを返す関数です\n",
-        "Enumの列挙する関数に渡すと、処理が終わらなくなるので気をつけましょう\n",
-        "Enum.take/2は、引数の数だけ取り出して処理します\n",
-        "\n",
-        "IO.inspect [1, 2, 3] |> Stream.cycle |> Enum.take(10)\n",
-        "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1]\n",
-        "Stream.unfold/2の処理の流れは、Enum.reduce/3と似ています\n",
-        "ただ、コールバック間で受け渡すデータがタプル{現在値, 集計値}のかたちをとるのです\n",
-        "そして、第1引数は初期値になります\n",
-        "\n",
-        "\n",
-        "数学の数列で第1項と第2項を決めて、それ以降の数を求める考え方です\n",
-        "コールバックに終了のための処理がないかぎり無限のStreamになります\n",
-        "たとえば、つぎのコードはフィボナッチ数列から10項を取り出してリストで返します\n",
-        "\n",
-        "IO.inspect fibs = Stream.unfold({1, 1}, fn({n0, n1}) -> {n0, {n1, n0 + n1}} end)\n",
         "#Function<64.58052446/2 in Stream.unfold/2>\n",
-        "IO.inspect Enum.take(fibs, 10)\n",
         "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]\n",
         "File.stream!/3は、引数のパスから読み込んだファイルをStream(File.stream)にします\n",
         "ストリーミングをはじめると、ファイルはElixirが自動的に開きます\n",
